[Qt]REGRESSION(r123786): It made 3 fast/animation tests fail. https://bugs.webkit.org/show_bug.cgi?id=92490

Source/WebKit/qt:

QAbstractAnimation:start() is implicitly calling updateTime
without going through the event loop. This resulted in executing
scripted animation callbacks right when registering a first callback.

Reviewed by Noam Rosenthal.

* WebCoreSupport/ChromeClientQt.cpp:
(WebCore::RefreshAnimation::scheduleAnimation):
    Invoke QAbstractAnimation::start() method through the event loop.

Source/WebKit2:

Make sure that scripted animations are also serviced when
forceRepaint is being executed. As this is what is being used for
running layout tests.
Move servicing of scripted animations and layoutIfNeeded call
into a separate function syncDisplayState.
This function can then be called from forceRepaint as well as from
performScheduledLayerFlush.

Reviewed by Noam Rosenthal.

* WebProcess/WebPage/LayerTreeCoordinator/LayerTreeCoordinator.cpp:
(WebKit::LayerTreeCoordinator::forceRepaint):
(WebKit::LayerTreeCoordinator::performScheduledLayerFlush):
(WebKit):
(WebKit::LayerTreeCoordinator::syncDisplayState):
* WebProcess/WebPage/LayerTreeCoordinator/LayerTreeCoordinator.h:
(LayerTreeCoordinator):

LayoutTests:

Reviewed by Noam Rosenthal.

* platform/qt/Skipped: Unskipping the tests listed below.
    fast/animation/request-animation-frame-cancel2.html
    fast/animation/request-animation-frame-detach-element.html
    fast/animation/request-animation-frame-during-modal.html
    fast/animation/request-animation-frame-timestamps.html
    fast/dom/Window/post-message-crash.html

Canonical link: https://commits.webkit.org/110709@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@124336 268f45cc-cd09-0410-ab3c-d52691b4dbfc